--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -42,5 +42,11 @@ jobs:
       - name: Run migration
         run: make migrateup
 
+      - name: Install golang-migrate CLI
+        run: |
+          curl -L https://github.com/golang-migrate/migrate/releases/download/v4.15.1/migrate.darwin-amd64.tar.gz | tar xvz
+          sudo mv migrate /usr/bin/
+          which migrate
+
       - name: Test
         run: make test
