update go version to 1.17

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -50,5 +50,8 @@ jobs:
       - name: Run migration
         run: make migrateup
 
+      - name: Run tidy
+        run: go mod tidy
+
       - name: Test
         run: make test
