--- a/app.env
+++ b/app.env
@@ -1,4 +1,4 @@
-DB_SOURCE=postgresql://root:mB6Eoww3qQ59TrncWKLU@simplebank.cpn3wqmmb6di.eu-central-1.rds.amazonaws.com:5432/simple_bank
+DB_SOURCE=postgresql://root:secret@localhost:5432/simple_bank?sslmode=disable
 DB_DRIVER=postgres
 SERVER_ADDRESS=0.0.0.0:8080
 ACCESS_TOKEN_DURATION=15m
