--- a/app.env
+++ b/app.env
@@ -1,4 +1,4 @@
-DB_SOURCE=postgresql://root:secret@localhost:5432/simple_bank?sslmode=disable
+DB_SOURCE=postgresql://root:admin123@localhost:5432/simple_bank?sslmode=disable
 DB_DRIVER=postgres
 SERVER_ADDRESS=0.0.0.0:8080
 ACCESS_TOKEN_DURATION=15m
