--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -6,13 +6,19 @@ on:
 
 jobs:
 
-  build:
+  deploy:
     name: Build image
     runs-on: ubuntu-latest
 
     steps:
       - name: Check out code
         uses: actions/checkout@v2
+
+      - name: install kubectl
+      - uses: azure/setup-kubectl@v2.0
+        with:
+          version: '1.23.3'
+        id: install
 
       - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v1
@@ -34,5 +40,14 @@ jobs:
           ECR_REPOSITORY: simplebank
           IMAGE_TAG: ${{ github.sha }}
         run: |
-          docker build -t $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG .
-          docker push $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
+          docker build -t $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG -t laters.
+          docker push $ECR_REGISTRY/$ECR_REPOSITORY
+
+      - name: Deploy image to EKS
+        run: |
+          kubectl apply - f eks/aws-auth.yaml
+          kubectl apply - f eks/deployment.yaml
+          kubectl apply - f eks/service.yaml
+          kubectl apply - f eks/issuer.yaml
+          kubectl apply - f eks/ingress.yaml
+
