--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -15,7 +15,7 @@ jobs:
         uses: actions/checkout@v2
 
       - name: install kubectl
-      - uses: azure/setup-kubectl@v2.0
+        uses: azure/setup-kubectl@v2.0
         with:
           version: '1.23.3'
         id: install
