--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -17,7 +17,7 @@ jobs:
       - name: install kubectl
         uses: azure/setup-kubectl@v2.0
         with:
-          version: '1.21.9'
+          version: '<version>'
         id: install
 
       - name: Configure AWS credentials
