--- a/eks/deployment.yaml
+++ b/eks/deployment.yaml
@@ -17,5 +17,6 @@ spec:
       containers:
         - name: simple-bank-api
           image: 654797183700.dkr.ecr.eu-north-1.amazonaws.com/simplebank:latest
+          imagePullPolicy: Always
           ports:
             - containerPort: 8080
