added image pull policy always

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,8 +1,8 @@
-name: deploy to production
+name: Deploy to production
 
 on:
   push:
-    branches: [ main ]
+    branches: [ release ]
 
 jobs:
 
@@ -14,10 +14,10 @@ jobs:
       - name: Check out code
         uses: actions/checkout@v2
 
-      - name: install kubectl
+      - name: Install kubectl
         uses: azure/setup-kubectl@v1
         with:
-          version: 'v1.23.3'
+          version: 'v1.21.3'
         id: install
 
       - name: Configure AWS credentials
@@ -32,7 +32,7 @@ jobs:
         uses: aws-actions/amazon-ecr-login@v1
 
       - name: Load secrets and save to app.env
-        run: aws secretsmanager get-secret-value --secret-id simple_bank --query SecretString --output text | jq -r 'to_entries|map("\(.key)=\(.value)") | .[]' > app.env
+        run: aws secretsmanager get-secret-value --secret-id simple_bank --query SecretString --output text | jq -r 'to_entries|map("\(.key)=\(.value)")|.[]' > app.env
 
       - name: Build, tag, and push image to Amazon ECR
         env:
@@ -40,8 +40,11 @@ jobs:
           ECR_REPOSITORY: simplebank
           IMAGE_TAG: ${{ github.sha }}
         run: |
-          docker build -t $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG -t latest .
-          docker push $ECR_REGISTRY/$ECR_REPOSITORY
+          docker build -t $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG -t $ECR_REGISTRY/$ECR_REPOSITORY:latest .
+          docker push -a $ECR_REGISTRY/$ECR_REPOSITORY
+
+      - name: Update kube config
+        run: aws eks update-kubeconfig --name simple-bank --region eu-north-1
 
       - name: Deploy image to EKS
         run: |
